--- a/EE/EE210/ee210.html
+++ b/EE/EE210/ee210.html
@@ -79,59 +79,64 @@
                     <h2>MINI Quizzes</h2>
                 </div>
             <!-- </div> -->
-            <a href="M1Set1Q1.pdf">Quiz1 Set1A</a><br>
-            <a href="M1Set1Q2.pdf">Quiz1 Set1B</a><br>
-            <a href="M1Set2Q1.pdf">Quiz1 Set2A</a><br>
-            <a href="M1Set2Q2.pdf">Quiz1 Set2B</a><br>
+            <a href="M1Set1Q1.pdf" target="_blank">Quiz1 Set1A</a><br>
+            <a href="M1Set1Q2.pdf" target="_blank">Quiz1 Set1B</a><br>
+            <a href="M1Set2Q1.pdf" target="_blank">Quiz1 Set2A</a><br>
+            <a href="M1Set2Q2.pdf" target="_blank">Quiz1 Set2B</a><br>
 <br>
-            <a href="M2Set1Q1.pdf">Quiz2 Set1A</a><br>
-            <a href="M2Set1Q2.pdf">Quiz2 Set1B</a><br>
-            <a href="M2Set2Q1.pdf">Quiz2 Set2A</a><br>
-            <a href="M2Set2Q2.pdf">Quiz2 Set2B</a><br>
+            <a href="M2Set1Q1.pdf" target="_blank">Quiz2 Set1A</a><br>
+            <a href="M2Set1Q2.pdf" target="_blank">Quiz2 Set1B</a><br>
+            <a href="M2Set2Q1.pdf" target="_blank">Quiz2 Set2A</a><br>
+            <a href="M2Set2Q2.pdf" target="_blank">Quiz2 Set2B</a><br>
 <br>        
-            <a href="M3Set1Q1.pdf">Quiz3 Set1A</a><br>
-            <a href="M3Set1Q2.pdf">Quiz3 Set1B</a><br>
-            <a href="M3Set2Q1.pdf">Quiz3 Set2A</a><br>
-            <a href="M3Set2Q2.pdf">Quiz3 Set2B</a><br>
+            <a href="M3Set1Q1.pdf" target="_blank">Quiz3 Set1A</a><br>
+            <a href="M3Set1Q2.pdf" target="_blank">Quiz3 Set1B</a><br>
+            <a href="M3Set2Q1.pdf" target="_blank">Quiz3 Set2A</a><br>
+            <a href="M3Set2Q2.pdf" target="_blank">Quiz3 Set2B</a><br>
 <br>        
-            <a href="M4Set1.pdf">Quiz4 Set1</a><br>
-            <a href="M4set2.pdf">Quiz4 Set2</a><br>
+            <a href="M4Set1.pdf" target="_blank">Quiz4 Set1</a><br>
+            <a href="M4set2.pdf" target="_blank">Quiz4 Set2</a><br>
 
 <br>        
-            <a href="M5Set1Q1.pdf">Quiz5 Set1A</a><br>
-            <a href="M5Set1Q2.pdf">Quiz5 Set1B</a><br>
-            <a href="M5Set2Q1.pdf">Quiz5 Set2A</a><br>
-            <a href="M5Set2Q2.pdf">Quiz5 Set2B</a><br>
+            <a href="M5Set1Q1.pdf" target="_blank">Quiz5 Set1A</a><br>
+            <a href="M5Set1Q2.pdf" target="_blank">Quiz5 Set1B</a><br>
+            <a href="M5Set2Q1.pdf" target="_blank">Quiz5 Set2A</a><br>
+            <a href="M5Set2Q2.pdf" target="_blank">Quiz5 Set2B</a><br>
 <br>        
-            <a href="M6SetA-Q1-Soln.pdf">Quiz6 Set1A</a><br>
-            <a href="M6SetA-Q2-Soln.pdf">Quiz6 Set1B</a><br>
-            <a href="M6SetB-Q1-Soln.pdf">Quiz6 Set2A</a><br>
-            <a href="M6SetB-Q2-Soln.pdf">Quiz6 Set2B</a><br>
+            <a href="M6SetA-Q1-Soln.pdf" target="_blank">Quiz6 Set1A</a><br>
+            <a href="M6SetA-Q2-Soln.pdf" target="_blank">Quiz6 Set1B</a><br>
+            <a href="M6SetB-Q1-Soln.pdf" target="_blank">Quiz6 Set2A</a><br>
+            <a href="M6SetB-Q2-Soln.pdf" target="_blank">Quiz6 Set2B</a><br>
 
 <br>        
-            <a href="M7Set1Q1 (1).pdf">Quiz7 Set1A</a><br>
-            <a href="M7Set1Q2 (1).pdf">Quiz7 Set1B</a><br>
-            <a href="M7Set2Q1 (1).pdf">Quiz7 Set2A</a><br>
-            <a href="M7Set2Q2 (1).pdf">Quiz7 Set2B</a><br>
+            <a href="M7Set1Q1 (1).pdf" target="_blank">Quiz7 Set1A</a><br>
+            <a href="M7Set1Q2 (1).pdf" target="_blank">Quiz7 Set1B</a><br>
+            <a href="M7Set2Q1 (1).pdf" target="_blank">Quiz7 Set2A</a><br>
+            <a href="M7Set2Q2 (1).pdf" target="_blank">Quiz7 Set2B</a><br>
             <br>
-            <a href="M8Q1SetA-Soln.pdf"> Quiz8 set1</a><br>
-            <a href="M8Q2SetA-Soln.pdf"> Quiz8 set2</a>
+            <a href="M8Q1SetA-Soln.pdf" target="_blank"> Quiz8 set1</a><br>
+            <a href="M8Q2SetA-Soln.pdf" target="_blank"> Quiz8 set2</a>
 
             <div class="heading">
                 <h2>Major Quiz</h2>
             </div>
 
-            <a href="MajorQuiz-Soln.pdf">Major Quiz</a>
+            <a href="MajorQuiz-Soln.pdf" target="_blank">Major Quiz</a>
             <div class="heading">
                 <h2>Mid-sem</h2>
             </div>
 
-            <a href="MidSem2024.pdf">Mid-sem</a>
+            <a href="MidSem2024.pdf" target="_blank">Mid-sem</a>
+            <div class="heading">
+                <h2>End-sem</h2>
+            </div>
+
+            <a href="EndSem_Soln.pdf" target="_blank">End-sem</a>
 
             <div class="heading">
                 <h2>Important source</h2>
             </div>
-            <a href="https://home.iitk.ac.in/~imon/Teaching.html">Video Lectures & Assignments</a>
+            <a href="https://home.iitk.ac.in/~imon/Teaching.html" target="_blank">Video Lectures & Assignments</a>
             
             </div>
 
