--- a/EE/MSO201/mso201.html
+++ b/EE/MSO201/mso201.html
@@ -79,10 +79,10 @@
                     <h2>CONTENT Y22</h2>
                 </div>
             </div>
-            <a href="MSO201A_ALL LECS.pdf"><h4>All Lecture</h4></a> <hr>
-            <a href="Quiz1.pdf"><h4>Quiz 1</h3></a>
-            <a href="Quiz 2.pdf"><h4>Quiz 2</h3></a>
-            <a href="midsem.pdf"><h4>Mid-sem Paper</h3></a>
+            <a href="MSO201A_ALL LECS.pdf" target="_blank"><h4>All Lecture</h4></a> <hr>
+            <a href="Quiz1.pdf" target="_blank"><h4>Quiz 1</h3></a>
+            <a href="Quiz 2.pdf" target="_blank"><h4>Quiz 2</h3></a>
+            <a href="midsem.pdf" target="_blank"><h4>Mid-sem Paper</h3></a>
         </div>
     </section>
 
