--- a/AE/aero.html
+++ b/AE/aero.html
@@ -28,11 +28,8 @@
                         <div class="menu-items">
                             <div class="menu">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="../index.html">Home</a></li>
                                     <li><a href="https://vedprakash226.github.io/My-Portfolio/">About Me</a></li>
-                                    <!-- <li><a href="services.html">Services</a></li>
-                                    <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="contact-us.html">Contact Us</a></li> -->
                                 </ul>
                             </div>
                         </div>
