--- a/AE/aero.html
+++ b/AE/aero.html
@@ -28,7 +28,7 @@
                         <div class="menu-items">
                             <div class="menu">
                                 <ul>
-                                    <li><a href="../index.html">Home</a></li>
+                                    <li><a href="https://vedprakash226.github.io/IITK_Resourses/EE/EE210/index.html">Home</a></li>
                                     <li><a href="https://vedprakash226.github.io/My-Portfolio/">About Me</a></li>
                                 </ul>
                             </div>
