--- a/ME/mec.html
+++ b/ME/mec.html
@@ -28,7 +28,7 @@
                         <div class="menu-items">
                             <div class="menu">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="https://vedprakash226.github.io/IITK_Resourses/EE/EE210/index.html">Home</a></li>
                                     <li><a href="https://vedprakash226.github.io/My-Portfolio/">About Me</a></li>
                                     <!-- <li><a href="services.html">Services</a></li>
                                     <li><a href="blog.html">Blog</a></li>
@@ -102,7 +102,7 @@
             </div>
             <div class="row">
 
-            <div class="col-lg-4 col-md-4 col-sm-6 col-12">
+            <!-- <div class="col-lg-4 col-md-4 col-sm-6 col-12">
                 <div class="main-wrapper">
                     <div class="content text-center">
                         <div class="sentence">
@@ -144,7 +144,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
+            <h2>Uploaded Soon...</h2>
 
                 
             </div>
