--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <div class="menu-items">
                             <div class="menu">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="https://vedprakash226.github.io/IITK_Resourses/EE/EE210/index.html">Home</a></li>
                                     <li><a href="https://vedprakash226.github.io/My-Portfolio/">About Me</a></li>
                                     <!-- <li><a href="services.html">Services</a></li>
                                     <li><a href="blog.html">Blog</a></li>
